--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                   </div>
               
                   <div class="home__info">
-                    <p class="home__description"><b>Data Scientist</b> passionate about building
-                      data-driven solutions. From models to deployment, I turn ideas
-                      into intelligent applications.
+                    <p class="home__description"><b>Data Scientist</b> Passionate about building data-driven solutions that turn complex problems into smart, 
+                        actionable outcomes. From model development to deployment, every step is driven by a focus on innovation and real-world impact. 
+                        Concepts seamlessly evolve into intelligent applications that are scalable, efficient, and user-centric.
                     </p>
                     <a href="#about" class="home__scroll">
                       <div class="home__scroll-box">
@@ -137,7 +137,7 @@
                             <b>Data Scientist</b> focused on building efficient,
                             scalable, and intelligent systems.
                             From model training to real-world deployment,
-                            I bring ideas to life through data.
+                            turning ideas into reality through the power of data.
 
                         </p>
 
